Bug 24691 - Regression in PS/PDF surface when changing page size
Summary: Regression in PS/PDF surface when changing page size
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.9.5
Hardware: All All
: medium normal
Assignee: Chris Wilson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
: 36595 (view as bug list)
Depends on:
Blocks: cairo-1.10
  Show dependency treegraph
 
Reported: 2009-10-23 04:21 UTC by Adrian Johnson
Modified: 2011-06-20 07:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
page size test case (1.41 KB, text/x-csrc)
2009-10-23 04:24 UTC, Adrian Johnson
Details

Description Adrian Johnson 2009-10-23 04:21:43 UTC
1.9.5 has a regression in the PS/PDF surfaces when the page size is changed to a size larger the the previous page. The new page is clipped to the same size as the previous page.
Comment 1 Adrian Johnson 2009-10-23 04:24:07 UTC
Created attachment 30635 [details]
page size test case

PostScipt test case demonstrating this bug. PDF has the same problem. This works fine in 1.8.8.
Comment 2 Adrian Johnson 2010-11-19 06:36:28 UTC
Fixed in 
e7c5f470436220668e50201d775a9fec47162a67
Comment 3 Andrea Canciani 2011-06-20 07:07:31 UTC
*** Bug 36595 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.