PS/PDF: Fix regression when changing page size to a larger size

https://bugs.freedesktop.org/show_bug.cgi?id=24691